<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cardtech</groupId>
	<artifactId>cardgamepoker</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Poker</name>
	<description>Plays poker by immediately going to showdown following deal.</description>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<release>9</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<argLine>-Djdk.attach.allowAttachSelf</argLine>
					<systemPropertyVariables>
						<log4j.configurationFile>conf/log4j-console-config.xml</log4j.configurationFile>
						<coverage-metrics>line,path</coverage-metrics>
						<coverage-output>html</coverage-output>
						<coverage-srcDirs>src/main/java</coverage-srcDirs>
						<coverage-excludes>sun.jvmstat.*</coverage-excludes>
						<!-- other properties, if needed -->
					</systemPropertyVariables>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>1.1.0</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
	<dependencies>
	
		<dependency>
			<groupId>org.jmockit</groupId>
			<artifactId>jmockit</artifactId>
			<version>1.40</version>
			<scope>test</scope>
		</dependency>

 		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.cardtech</groupId>
			<artifactId>cardcore</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.cardtech</groupId>
			<artifactId>cardgame</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>

</project>